--- a/iteration-07/package.json
+++ b/iteration-07/package.json
@@ -2,16 +2,20 @@
   "name": "script",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "16.11.26",
     "prisma": "3.12.0",
     "ts-node": "10.7.0",
-    "typescript": "4.6.3",
-    "@types/node": "16.11.26"
+    "typescript": "4.6.3"
   },
   "scripts": {
-    "dev": "ts-node ./script.ts"
+    "dev": "ts-node ./script.ts",
+    "start": "set PORT=3000 && nodemon src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "3.12.0"
+    "@prisma/client": "3.12.0",
+    "express": "^4.17.3",
+    "yup": "^0.32.11"
   },
   "engines": {
     "node": ">=12.2.0"
