--- a/iteration-07/package.json
+++ b/iteration-07/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "3.12.0",
     "express": "^4.17.3",
+    "pug": "^3.0.2",
     "yup": "^0.32.11"
   },
   "engines": {
