--- a/iteration-07/package.json
+++ b/iteration-07/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "16.11.26",
+    "nodemon": "^2.0.16",
     "prisma": "3.12.0",
     "ts-node": "10.7.0",
     "typescript": "4.6.3"
