--- a/iteration-10/frontend/package.json
+++ b/iteration-10/frontend/package.json
@@ -8,8 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
+    "react-router-dom": "^6.3.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
